--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,13 +7,17 @@
         android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="18"/>
 
+    <uses-feature
+        android:name="android.hardware.camera2"
+        android:required="false"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CrimeListActivity">
+        <activity android:name=".activity.CrimeListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -21,9 +25,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".CrimePagerActivity"
+            android:name=".activity.CrimePagerActivity"
             android:label="@string/title_activity_crime"
-            android:parentActivityName=".CrimeListActivity"
+            android:parentActivityName=".activity.CrimeListActivity"
             android:theme="@style/AppTheme">
         </activity>
     </application>
